force-app/main/default/objects/DocuSignTab__c/DocuSignTab__c.object-meta.xml
<CustomObject>
    <label>DocuSignTab</label>
    <nameField>
        <displayFormat>DST-{00000}</displayFormat>
        <label>DocuSignTab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSignTab</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>