force-app/main/default/objects/DocuSignTab__c/fields/AnchorString__c.field-meta.xml
<CustomField>
    <fullName>AnchorString__c</fullName>
    <label>AnchorString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>