force-app/main/default/objects/DocuSignTab__c/fields/DocuSign_Document__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Document</label>
    <referenceTo>DocuSign_Document__c</referenceTo>
    <relationshipLabel>DocuSignTab</relationshipLabel>
    <relationshipName>DocuSignTab</relationshipName>
    <type>Lookup</type>
</CustomField>