force-app/main/default/objects/DocuSignTab__c/fields/IsAPI__c.field-meta.xml
<CustomField>
    <fullName>IsAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAPI</label>
    <type>Checkbox</type>
</CustomField>