force-app/main/default/objects/DocuSignTab__c/fields/pageNumber__c.field-meta.xml
<CustomField>
    <fullName>pageNumber__c</fullName>
    <label>pageNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>