force-app/main/default/objects/DocuSignTab__c/fields/Tabs__c.field-meta.xml
<CustomField>
    <fullName>Tabs__c</fullName>
    <label>Tabs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>signHereTabs</fullName>
            </value>
            <value>
                <fullName>dateSignedTabs</fullName>
            </value>
            <value>
                <fullName>textTabs</fullName>
            </value>
            <value>
                <fullName>checkboxTabs</fullName>
            </value>
            <value>
                <fullName>noteTabs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>