force-app/main/default/objects/DocuSignTab__c/fields/textTabsField__c.field-meta.xml
<CustomField>
    <fullName>textTabsField__c</fullName>
    <label>textTabsField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>