force-app/main/default/objects/DocuSignTab__c/fields/XPosition__c.field-meta.xml
<CustomField>
    <fullName>XPosition__c</fullName>
    <label>XPosition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>