force-app/main/default/objects/DocuSignTab__c/fields/YPosition__c.field-meta.xml
<CustomField>
    <fullName>YPosition__c</fullName>
    <label>YPosition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>